--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
                 <a href=""><button class="nav-btn">Contact</button></a>
             </div>
         </nav>
+        <div class="banner">
+            <div>
+                <h1 class="banner-heading"><span class="empower">Empowering</span>
+                    students from small age <span class="vision">towards vision</span></h1>
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make their
+                    Unique Contribution in a Diverse and Dynamic World.</p>
+                <a href=""><button class="banner-btn">Enroll Now</button></a>
+            </div>
+            <div>
+                <img src="assets/hero-kids.png" alt="Image of Hero Kids">
+            </div>
+        </div>
     </header>
     <main>
 
