--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2</title>
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="https://kit.fontawesome.com/1f03694f4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="quicksand-font">
@@ -41,7 +42,39 @@
         </div>
     </header>
     <main>
-
+        <section class="curriculum">
+            <h2 class="curriculum-heading">Standard Curriculum</h2>
+            <div class="curriculum-cards">
+                <div class="curriculum-card1">
+                    <div class="card-img"><img src="assets/kinder.png" alt="Image depicts kinder garden"></div>
+                    <h3 class="card-heading">Kinder (3-6) Years</h3>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href="" class="more-card1-description">Read More</a>
+                </div>
+                <div class="curriculum-card2">
+                    <div class="card-img"><img src="assets/elementary.png" alt="Image depicts kinder garden"></div>
+                    <h3 class="card-heading">Elementary School</h3>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href="" class="more-card2-description">Read More</a>
+                </div>
+                <div class="curriculum-card3">
+                    <div class="card-img"><img src="assets/middle.png" alt="Image depicts kinder garden"></div>
+                    <h3 class="card-heading">Middle (10-16) Years</h3>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href="" class="more-card3-description">Read More</a>
+                </div>
+            </div>
+            <div class="curriculum-btns">
+                <a href=""><button class="curriculum-btn"><i class="fa-solid fa-angle-left"></i></button></a>
+                <a href=""><button class="curriculum-btn"><i class="fa-solid fa-angle-right"></i></button></a>
+            </div>
+        </section>
     </main>
     <footer>
 
