--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2</title>
     <link rel="stylesheet" href="Styles/style.css">
-    <script src="https://kit.fontawesome.com/1f03694f4b.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/1f03694f4b.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body class="quicksand-font">
@@ -71,8 +71,48 @@
                 </div>
             </div>
             <div class="curriculum-btns">
-                <a href=""><button class="curriculum-btn"><i class="fa-solid fa-angle-left"></i></button></a>
-                <a href=""><button class="curriculum-btn"><i class="fa-solid fa-angle-right"></i></button></a>
+                <!-- <a href=""><button class="curriculum-btn"><i class="fa-solid fa-angle-left"></i></button></a>
+                <a href=""><button class="curriculum-btn"><i class="fa-solid fa-angle-right"></i></button></a> -->
+                <a href=""><button class="curriculum-btn">a</button></a>
+                <a href=""><button class="curriculum-btn">b</i></button></a>
+            </div>
+        </section>
+        <section class="stories">
+            <h2 class="stories-heading">Our Stories</h2>
+            <div class="story-cards">
+                <div class="story-card">
+                    <img src="assets/story-1.png" alt="Image of Story 1" class="story-card-img">
+                    <h3 class="story-card-heading">A fun toddler coloring training on
+                        classroom</h3>
+                    <p class="story-card-description">Beautiful branding for changes by Never Now in Australia.
+                        Changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the students</p>
+                </div>
+                <div class="story-cards-mini">
+                    <div class="story-card-mini">
+                        <img src="assets/story-2.png" alt="Image of Story 2" class="story-card-mini-img">
+                        <h3 class="story-heading">Find out if a school fits the
+                            family's needs</h3>
+                    </div>
+                    <div class="story-card-mini">
+                        <img src="assets/story-3.png" alt="Image of Story 3" class="story-card-mini-img">
+                        <h3 class="story-heading">Summer math & literacy
+                            centres for kids</h3>
+                    </div>
+                    <div class="story-card-mini">
+                        <img src="assets/story-4.png" alt="Image of Story 4" class="story-card-mini-img">
+                        <h3 class="story-heading">Classroom management
+                            techniques for new tutors</h3>
+                    </div>
+                    <div class="story-card-mini">
+                        <img src="assets/story-5.png" alt="Image of Story 5" class="story-card-mini-img">
+                        <h3 class="story-heading">Conversation rhymes
+                            improve kids listening</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-story">
+                <a href=""><button class="story-btn">View All</button></a>
             </div>
         </section>
     </main>
