--- a/index.html
+++ b/index.html
@@ -116,8 +116,40 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-columns">
+            <div class="footer-column1">
+                <div class="logo-name">
+                    <div><img src="assets/logo.png" alt=""></div>
+                    <h3><a href="" class="column1-heading">Kids
+                            Education</a></h3>
+                </div>
+                <p class="column1-description">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon
+                    Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+            <div class="footer-column2">
+                <h3 class="column2-heading">About School</h3>
+                <a href="" class="column2-description">
+                    <p>Home</p>
+                </a>
+                <a href="" class="column2-description">
+                    <p>About</p>
+                </a>
+                <a href="" class="column2-description">
+                    <p>Facilities</p>
+                </a>
+                <a href="" class="column2-description">
+                    <p>Admission</p>
+                </a>
+            </div>
+            <div class="footer-column3">
+                <h3 class="column3-heading">Keep In Touch</h3>
+                <a href=""><img src="assets/fb.png" alt=""></a>
+                <a href=""><img src="assets/dribble.png" alt=""></a>
+                <a href=""><img src="assets/twitter.png" alt=""></a>
+                <a href=""><img src="assets/google+.png" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 
