--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="nav-logo"><img src="assets/logo.png" alt="Logo of the school"></div>
                 <a href="" class="nav-name">SCHOOL</a>
             </div>
-            <div>
+            <div class="nav-bar">
                 <ul>
                     <li><a href="" class="nav-item-1">Home</a></li>
                     <li><a href="" class="nav-item-2">About</a></li>
@@ -27,8 +27,26 @@
             <div>
                 <a href=""><button class="nav-btn">Contact</button></a>
             </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <button class="menu-btn">
+                            <hr>
+                            <hr>
+                            <hr>
+                            <ul class="drop-down">
+                                <li><a href="" class="nav-item-1">Home</a></li>
+                                <li><a href="" class="nav-item-2">About</a></li>
+                                <li><a href="" class="nav-item-3">Facilities</a></li>
+                                <li><a href="" class="nav-item-4">Admission</a></li>
+                                <li><a href="" class="nav-item-5">Contact</a></li>
+                            </ul>
+                        </button>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div class="banner">
+        <div class="banner hide">
             <div>
                 <h1 class="banner-heading"><span class="empower">Empowering</span>
                     students from small age <span class="vision">towards vision</span></h1>
@@ -42,7 +60,7 @@
         </div>
     </header>
     <main>
-        <section class="curriculum">
+        <section class="curriculum hide">
             <h2 class="curriculum-heading">Standard Curriculum</h2>
             <div class="curriculum-cards">
                 <div class="curriculum-card1">
@@ -77,7 +95,7 @@
                 <a href=""><button class="curriculum-btn">b</i></button></a>
             </div>
         </section>
-        <section class="stories">
+        <section class="stories hide">
             <h2 class="stories-heading">Our Stories</h2>
             <div class="story-cards">
                 <div class="story-card">
@@ -116,7 +134,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer hide">
         <div class="footer-columns">
             <div class="footer-column1">
                 <div class="logo-name">
