--- a/index.html
+++ b/index.html
@@ -46,21 +46,24 @@
                 </ul>
             </div>
         </nav>
-        <div class="banner hide">
+        <hr>
+        <div class="banner">
             <div>
                 <h1 class="banner-heading"><span class="empower">Empowering</span>
                     students from small age <span class="vision">towards vision</span></h1>
                 <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make their
                     Unique Contribution in a Diverse and Dynamic World.</p>
-                <a href=""><button class="banner-btn">Enroll Now</button></a>
+                <div class="banner-btn-container">
+                    <a href=""><button class="banner-btn">Enroll Now</button></a>
+                </div>
             </div>
-            <div>
-                <img src="assets/hero-kids.png" alt="Image of Hero Kids">
+            <div class="banner-img-container">
+                <img src="assets/hero-kids.png" alt="Image of Hero Kids" class="banner-img">
             </div>
         </div>
     </header>
     <main>
-        <section class="curriculum hide">
+        <section class="curriculum">
             <h2 class="curriculum-heading">Standard Curriculum</h2>
             <div class="curriculum-cards">
                 <div class="curriculum-card1">
