Responsive Stories Section Completed

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <a href=""><button class="curriculum-btn">b</i></button></a>
             </div>
         </section>
-        <section class="stories hide">
+        <section class="stories">
             <h2 class="stories-heading">Our Stories</h2>
             <div class="story-cards">
                 <div class="story-card">
