Responsive Footer Completed

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer hide">
+    <footer class="footer">
         <div class="footer-columns">
             <div class="footer-column1">
                 <div class="logo-name">
